# crabbyproxy

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.test  LICENSE  README.md  com.digisho.crabbyproxy.plist  config.toml.default  crabbyproxy-setpac  doh.conf.default  install.sh  proxy.pac
src/: main.rs
